# productive-agent-todoist

./: .env.example  .gitignore  1-calling-llm.py  2-researcher.py  3-analista.py  4-assistente.py  5-assistente-agentOS.py  5-assistente-api.py  6-storage.py  7-rag-azure-agentos.py  7-rag-azure-pdf.py  8-memory.py  9-teams.py  APRESENTACAO.md  DEPLOY.md  Dockerfile  Dockerfile.backend  README.md  docker-compose.production.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-production.txt  requirements.txt  script.md
src/assistants/: todoist_basic.py  todoist_with_memory.py  todoist_with_storage.py
src/config/: __init__.py
src/tools/: __init__.py  todoist.py
src/utils/: __init__.py  memory.py
